--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,45 @@
-/* You can add global styles to this file, and also import other style files */
+// Variáveis para cores
+$label-no-foco: #aaaaaa;
+$label-foco: #333333;
+$input-bg: #ffffff;
+$input-stroke: rgba(0, 0, 0, 0.1);
+$button-shadow: 7px 7px 4px -1px rgba(0, 0, 0, 0.15);
+$button-stroke: rgba(0, 0, 0, 0.1);
+$error-mensage: rgb(190, 57, 57);
+
+
+
+
+
+
+
+////////////////////////////////////// RESET /////////////////////////////////////
+/// 
+/* Reset de estilos básicos */
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  border: none;
+  outline: none;
+}
+
+/* Remover comportamento de rolagem */
+html,
+body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+/* Configuração padrão de fonte e estilo global */
+body {
+  font-family: Arial, sans-serif;
+  line-height: 1.6;
+  color: #333333;
+  background-color: #ffffff;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
