adicionado auth e 2 fator

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!-- app.component.html -->
 <div class="app-container">
-  <router-outlet></router-outlet>
+  <router-outlet class="app-container-component"></router-outlet>
 </div>
 
 
