--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -2,10 +2,10 @@
     <img src="../assets/lg.png" alt="Logo" class="logo" />
     <div class="form">
       <label for="username" class="label">Usuário</label>
-      <input type="text" id="username" [(ngModel)]="username" class="input" placeholder="Usuário" />
+      <input type="text" id="username" [(ngModel)]="usuario" class="input" placeholder="Usuário" />
   
       <label for="password" class="label">Senha</label>
-      <input type="password" id="password" [(ngModel)]="password" class="input" placeholder="Senha" />
+      <input type="password" id="password" [(ngModel)]="senha" class="input" placeholder="Senha" />
   
       <button class="login-button" (click)="onLogin()">Entrar</button>
       <p *ngIf="loginError" class="error-message">Usuário ou senha incorretos.</p>
